Fixes for PageSpeed and Font Color Contrast Ratio!

--- a/core/css/mainstyle.css
+++ b/core/css/mainstyle.css
@@ -1,6 +1,6 @@
 /* Main Style */
 html{
-    color: #999 !important;
+    color: #9E9E9E !important;
     border: 0;
     background-color: #111 !important;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #444), color-stop(100%, #111));
